# marklink

./: .gitignore  Pipfile  README.md  marklink.py  pyproject.toml  setup.py  test_marklink.py
marklink/: __init__.py  core.py  marklink.py
src/marklink/: __init__.py  marklink.py
tests/: test_marklink.py
tests/cassettes/: test_get_title
